<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PCGAdmin.Fragments.NewsFeedAdminFragment"
    android:background="@color/gray">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:background="@color/white"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/logo_pcg"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/TVGoCreateContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackgroundBorderless"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:text="@string/write_something"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
    <View
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:weightSum="3"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:paddingBottom="10dp"
            android:paddingTop="7dp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/black"
            android:drawablePadding="5dp"
            android:paddingStart="45dp"
            android:drawableStart="@drawable/live"
            android:text="@string/live"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_marginTop="6dp"
            android:background="@color/gray"
            android:layout_width="1dp"
            android:layout_height="20dp"/>

        <TextView
            android:paddingBottom="10dp"
            android:paddingTop="7dp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/black"
            android:drawablePadding="5dp"
            android:paddingStart="35dp"
            android:drawableStart="@drawable/picture"
            android:text="@string/photo"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_marginTop="6dp"
            android:background="@color/gray"
            android:layout_width="1dp"
            android:layout_height="20dp"/>

        <TextView
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:paddingBottom="10dp"
            android:paddingTop="7dp"
            android:textColor="@color/black"
            android:drawablePadding="5dp"
            android:paddingStart="20dp"
            android:drawableStart="@drawable/map"
            android:text="@string/check_in"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <FrameLayout
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:visibility="gone"
            android:id="@+id/TVreview_resultAdminFeeds"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity=""
            android:textSize="30sp"
            android:text="@string/no_advisory_posted_yet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:layout_gravity="bottom"
            android:id="@+id/swipeRefreshLayoutAdminFeeds"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_viewAdminFeeds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

        </android.support.v4.widget.SwipeRefreshLayout>
    </FrameLayout>

    </LinearLayout>
</ScrollView>